[project]
name = "findmybus"
version = "0.1.0"
description = ""
authors = [
    {name = "pmourafr",email = "pedrofran682@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "polyfactory (>=3.0.0,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "findmybus", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]